--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
         }
     };
     for (let i = 0; i < 6; ++i) {
-        TABS.all.items = [...TABS.all.items, ...TABS.all.items];
+        TABS.all.items.push(...TABS.all.items) 
+        // = [...TABS.all.items, ...TABS.all.items];
     }
     const TABS_KEYS = Object.keys(TABS);
 
@@ -393,7 +394,7 @@
         </main>;
     }
 
-    setTimeout(() => {
+    // setTimeout(() => {
         const root = ReactDOM.createRoot(document.getElementById('app'));
         root.render(
             <>
@@ -401,7 +402,7 @@
                 <Main />
             </>
         );
-    }, 100);
+    // }, 100);
 </script>
 
 </body>
