--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
                 }]
             }
         };
-        // for (let i = 0; i < 6; ++i)
-        // {
-        //     TABS.all.items.push(...TABS.all.items)
-        //     // = [...TABS.all.items, ...TABS.all.items];
-        // }
+        for (let i = 0; i < 6; ++i)
+        {
+            // TABS.all.items.push(...TABS.all.items)
+            TABS.all.items = [...TABS.all.items, ...TABS.all.items];
+        }
         const TABS_KEYS = Object.keys(TABS);
         function FeaturedDevices()
         {
