--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Яндекс.Дом</title>
-    <link rel="preload" as="font" href="assets/lato.woff2" type="font/woff2" crossorigin="anonymous">
+    <!-- <link rel="preload" as="font" href="assets/lato.woff2" type="font/woff2" crossorigin="anonymous"> -->
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
+    <link rel="stylesheet" type="text/css" href="style3.css">
 </head>
 
 <body>
@@ -34,9 +37,9 @@
             © 1997–2023 ООО «Яндекс»
         </div>
     </footer>
-    <script src="vendors/react-with-dom.js"></script>
+    <script async src="vendors/react-with-dom.js"></script>
     <script src="vendors/babel.min.js"></script>
-    <script type="text/babel">
+    <script async type="text/babel">
         function Header()
         {
             let [expanded, setExpanded] = React.useState(false);
@@ -91,7 +94,7 @@
 
             return <li ref={ref} className={'event' + (props.slim ? ' event_slim' : '')}>
                 <button className="event__button">
-                    <span className={`event__icon event__icon_${props.icon}`} role="img" aria-label={props.iconLabel}></span>
+                    <span className={`event__icon event__icon_${props.icon}`} loading="lazy" role="img" aria-label={props.iconLabel}></span>
                     <h4 className="event__title">{props.title}</h4>
                     {props.subtitle &&
                         <span className="event__subtitle">{props.subtitle}</span>
@@ -338,6 +341,7 @@
                                         <span className="a11y-hidden">°</span>
 
                                         <div
+                                            loading="lazy"
                                             className="hero-dashboard__icon hero-dashboard__icon_rain"
                                             role="img"
                                             aria-label="Дождь"
